tableau-connector/1.0/release-notes.md
---
title: Release Notes
description: Release notes, installation instructions, and download archive for
  the Couchbase Tableau Connector.
editUrl: https://github.com/couchbase/docs-tableau/edit/release/1.0/modules/ROOT/pages/release-notes.adoc
pubDate: 2026-03-20T03:41:54.898Z
link: xref:1.0@tableau-connector::release-notes.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/tableau-connector/1.0/release-notes.html)

# Release Notes

> Release notes, installation instructions, and download archive for the Couchbase Tableau Connector. 

## [](#installation)Installation

Scroll down to the version you want, then click the **Download** link to get the full connector distribution. Refer to [Set up the Couchbase Tableau Connector](setup-tableau-connector.md) for detailed installation instructions.

## [](#v1.1.2)Version 1.1.2 (2024-05-03)

[Download](https://packages.couchbase.com/releases/couchbase-tableau-connector/1.1.2/couchbase-tableau-connector-1.1.2.zip)

### [](#enhancements)Enhancements

* [TACO-16](https://issues.couchbase.com/browse/TACO-16)Added support for the median function.

## [](#v1.1.1)Version 1.1.1 (2023-12-05)

[Download](https://packages.couchbase.com/releases/couchbase-tableau-connector/1.1.1/couchbase-tableau-connector-1.1.1.zip)

### [](#enhancements-2)Enhancements

* [JDBCC-51](https://issues.couchbase.com/browse/JDBCC-51): Added support for Database metadata entity.

## [](#v1.1.0)Version 1.1.0 (2023-07-31)

[Download](https://packages.couchbase.com/releases/couchbase-tableau-connector/1.1.0/couchbase-tableau-connector-1.1.0.zip)

The connector is now compatible with Tableau Cloud.

### [](#enhancements-3)Enhancements

* [JDBCC-43](https://issues.couchbase.com/browse/JDBCC-43): Tableau queries now time out gracefully if connection to Couchbase Analytics is lost.
* [JDBCC-44](https://issues.couchbase.com/browse/JDBCC-44): Tableau SSL parameters may be changed without requiring restart.
* [JDBCC-48](https://issues.couchbase.com/browse/JDBCC-48): Upgrade Couchbase Java SDK from `3.3.4` to `3.4.3`.

## [](#v1.0.0)Version 1.0.0 (2022-04-27)

[Download](https://packages.couchbase.com/releases/couchbase-tableau-connector/1.0.0/couchbase-tableau-connector-1.0.0.zip)

Initial release.