tableau-connector/1.2/release-notes.md
---
title: Release Notes
description: Release notes, installation instructions, and download archive for
  the Couchbase Tableau Connector.
pubDate: 2026-08-17T09:53:44.266Z
antora:
  editUrl: https://github.com/couchbase/docs-tableau/edit/release/1.2/modules/ROOT/pages/release-notes.adoc
  xref: xref:1.2@tableau-connector::release-notes.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/tableau-connector/1.2/release-notes.html)

# Release Notes

> Release notes, installation instructions, and download archive for the Couchbase Tableau Connector. 

## [](#installation)Installation

Scroll to the version you want and click the download link to get the full connector distribution. For more information on installing the connector, see [Download Couchbase Tableau Connector](setup-tableau-connector.md).

> [!IMPORTANT]
> By downloading the Couchbase Tableau Connector, you agree to the terms of the [Couchbase Tableau Connector License Agreement](https://www.couchbase.com/toollicenses/tableau/).

## [](#v.1.2.0)Version 1.2.0 (2026-06-30)

### [](#downloads)Downloads

[Tableau Connector 1.2.0 Download](https://packages.couchbase.com/releases/couchbase-tableau-connector/1.2.0/couchbase-analytics-tableau-connector-1.2.0.zip)

> [!NOTE]
> Tableau Connector 1.2.0 is compatible with both Couchbase Analytics Service and Capella Analytics.

### [](#enhancements)Enhancements

* [TACO-25](https://issues.couchbase.com/browse/TACO-25), [JDBCC-55](https://issues.couchbase.com/browse/JDBCC-55): Added support for LDAP authentication.
* [TACO-25](https://issues.couchbase.com/browse/TACO-25), [JDBCC-54](https://issues.couchbase.com/browse/JDBCC-54): Added support for client certificate authentication.
* [JDBCC-60](https://issues.couchbase.com/browse/JDBCC-60): Upgraded the underlying Java SDK from version 3.11.1 to 3.12.0.
* [TACO-27](https://issues.couchbase.com/browse/TACO-27): Resolved minor bugs.

## [](#v1.1.3)Version 1.1.3 (2024-08-05)

### [](#downloads-2)Downloads

[Tableau Connector 1.1.3 Download](https://packages.couchbase.com/releases/couchbase-tableau-connector/1.1.3/couchbase-tableau-connector-1.1.3.zip)

### [](#enhancements-2)Enhancements

* [TACO-24](https://issues.couchbase.com/browse/TACO-24): Added Columnar support.

## [](#v1.1.2)Version 1.1.2 (2024-05-03)

### [](#downloads-3)Downloads

[Tableau Connector 1.1.2 Download](https://packages.couchbase.com/releases/couchbase-tableau-connector/1.1.2/couchbase-tableau-connector-1.1.2.zip)

### [](#enhancements-3)Enhancements

* [TACO-16](https://issues.couchbase.com/browse/TACO-16): Added support for the median function.

## [](#v1.1.1)Version 1.1.1 (2023-12-05)

### [](#downloads-4)Downloads

[Tableau Connector 1.1.1 Download](https://packages.couchbase.com/releases/couchbase-tableau-connector/1.1.1/couchbase-tableau-connector-1.1.1.zip)

### [](#enhancements-4)Enhancements

* [JDBCC-51](https://issues.couchbase.com/browse/JDBCC-51): Added support for Database metadata entity.

## [](#v1.1.0)Version 1.1.0 (2023-07-31)

### [](#downloads-5)Downloads

[Tableau Connector 1.1.0 Download](https://packages.couchbase.com/releases/couchbase-tableau-connector/1.1.0/couchbase-tableau-connector-1.1.0.zip)

The connector is now compatible with Tableau Cloud.

### [](#enhancements-5)Enhancements

* [JDBCC-43](https://issues.couchbase.com/browse/JDBCC-43): Tableau queries now time out gracefully if connection to Couchbase Analytics is lost.
* [JDBCC-44](https://issues.couchbase.com/browse/JDBCC-44): Tableau SSL parameters may be changed without requiring restart.
* [JDBCC-48](https://issues.couchbase.com/browse/JDBCC-48): Upgrade Couchbase Java SDK from `3.3.4` to `3.4.3`.

## [](#v1.0.0)Version 1.0.0 (2022-04-27)

### [](#downloads-6)Downloads

[Tableau Connector 1.0.0 Download](https://packages.couchbase.com/releases/couchbase-tableau-connector/1.0.0/couchbase-tableau-connector-1.0.0.zip)

Initial release.